Bug 312783 - Marble crashes when --smallscreen is specified
Summary: Marble crashes when --smallscreen is specified
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6 (KDE 4.11)
Platform: Other Linux
: NOR critical
Target Milestone: ---
Assignee: Dennis Nienhüser
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-06 23:42 UTC by Bernhard Beschow
Modified: 2013-04-07 07:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2013-01-06 23:42:25 UTC
Marble crashes when --smallscreen is specified

Reproducible: Always

Steps to Reproduce:
1. Start Marble and pass --smallscreen as command line parameter
Actual Results:  
Marble crashes.

Expected Results:  
Marble shouldn't crash.
Comment 1 Dennis Nienhüser 2013-01-09 11:01:45 UTC
Git commit 936df10b6da0b9c8882641f0a0c26774593ac16a by Dennis Nienhüser.
Committed on 09/01/2013 at 12:00.
Pushed by nienhueser into branch 'master'.

Don't crash with --smallscreen

M  +10   -7    src/QtMainWindow.cpp

http://commits.kde.org/marble/936df10b6da0b9c8882641f0a0c26774593ac16a