Don't crash with --smallscreen

BUG: 312783